data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_281.wast
;; 2. **Test with `nop` before `br_if 0` inside a loop**:    - **Constraint**: Assures `nop` does not interfere with `br_if` conditions within loops.    - **Relation to Infinite Loops**: An improperly handled `nop` may cause `br_if` to fail in breaking the loop, creating an infinite loop.

(assert_invalid
  (module
    (func (loop (nop) (br_if 0 (i32.const 1))))
  )
  "type mismatch"
)